--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "ru.blogspot.c0dedgarik.arc"
-        minSdkVersion 15
+        minSdkVersion 12 // LruCache min 12
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
