--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "ru.blogspot.c0dedgarik.arc"
-        minSdkVersion 12 // LruCache min 12
+        minSdkVersion 14 // LruCache min 12
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -19,7 +19,12 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.vanniktech:vntnumberpickerpreference:0.1.1-SNAPSHOT'
 }
